--- a/python/.vscode/launch.json
+++ b/python/.vscode/launch.json
@@ -57,6 +57,15 @@
             "console": "integratedTerminal",
             "python": "/home/papst/ypy/bin/python",
             "args": ["GPIO25"]
-        }        
+        },
+        {
+            "name": "ring",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "ring.py",
+            "console": "integratedTerminal",
+            "python": "/home/papst/ypy/bin/python",
+            "args": ["GPIO16"]
+        }     
     ]
 }
